--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:background="@color/white"
-    tools:context=".AdminMainActivity">
+    tools:context=".activities.AdminMainActivity">
 
     <TextView
         android:id="@+id/adminMainActivity_tvSearch"
