--- a/app/src/main/res/layout/fragment_credit.xml
+++ b/app/src/main/res/layout/fragment_credit.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_gradient"
-    tools:context=".CreditFragment">
+    tools:context=".fragments.CreditFragment">
 
     <TextView
         android:id="@+id/creditFrag_tvName"
