--- a/app/src/main/res/layout/fragment_request_money.xml
+++ b/app/src/main/res/layout/fragment_request_money.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/blue_gradient"
-    tools:context=".RequestMoneyFragment">
+    tools:context=".fragments.RequestMoneyFragment">
 
 
     <TextView
