--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_gradient"
-    tools:context=".TransactionsFragment">
+    tools:context=".fragments.TransactionsFragment">
 
     <android.widget.Toolbar
         android:id="@+id/transactionsFrag_toolbar"
