--- a/app/src/main/res/drawable/roundbackground_listview.xml
+++ b/app/src/main/res/drawable/roundbackground_listview.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="30dp" />
-    <solid android:color="@color/grey" />
+    <solid android:color="@color/light_grey" />
 </shape>
