--- a/app/src/main/res/layout/fragment_credit.xml
+++ b/app/src/main/res/layout/fragment_credit.xml
@@ -71,7 +71,7 @@
             app:cornerRadius="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></com.google.android.material.button.MaterialButton>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ListView
             android:id="@+id/creditFrag_lvCredits"
