--- a/app/src/main/res/layout/lv_accounts_row_item.xml
+++ b/app/src/main/res/layout/lv_accounts_row_item.xml
@@ -2,13 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/red_gradient">
+    android:background="@drawable/roundbackground_red_gradient"
+    android:elevation="1sp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25sp"
-        android:background="@color/grey"
+        android:background="@drawable/roundbackground_bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +53,7 @@
             android:backgroundTint="@color/red"
             android:textSize="12sp"
             android:layout_marginTop="10sp"
+            android:layout_marginBottom="5sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
