--- a/app/src/main/res/layout/lv_credit_row_item.xml
+++ b/app/src/main/res/layout/lv_credit_row_item.xml
@@ -2,13 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/red_gradient">
+    android:background="@drawable/roundbackground_red_gradient"
+    android:elevation="3sp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/roundbackground_bottom"
         android:layout_width="match_parent"
         android:layout_height="100sp"
         android:layout_marginTop="25sp"
-        android:background="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 android:text="@string/loaned_amount"
                 android:textStyle="bold"/>
 
@@ -46,6 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:text="View Credit"
+            android:backgroundTint="@color/red"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
