--- a/app/src/main/res/layout/lv_credit_short_row_item.xml
+++ b/app/src/main/res/layout/lv_credit_short_row_item.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="310sp"
     android:layout_height="wrap_content"
-    android:background="@drawable/roundbackground_listview">
+    android:background="@drawable/roundbackground_listview"
+    android:elevation="1sp">
 
     <LinearLayout
         android:layout_width="wrap_content"
