--- a/app/src/main/res/layout/lv_incoming_request_row_item.xml
+++ b/app/src/main/res/layout/lv_incoming_request_row_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/roundbackground_listview">
+    android:background="@drawable/roundbackground_listview"
+    android:elevation="1sp">
 
 
     <TextView
