--- a/app/src/main/res/layout/dialog_pay.xml
+++ b/app/src/main/res/layout/dialog_pay.xml
@@ -80,6 +80,7 @@
                 android:layout_marginTop="5sp"
                 android:layout_marginEnd="20sp"
                 android:background="@drawable/background_spinner"
+                android:overScrollMode="never"
                 android:entries="@array/transaction_categories_array"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -102,11 +103,11 @@
                 android:layout_marginStart="20sp"
                 android:layout_marginTop="5sp"
                 android:layout_marginEnd="20sp"
+                android:overScrollMode="never"
                 android:background="@drawable/background_spinner"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/payDiag_tvCard" />
-
 
             <TextView
                 android:id="@+id/payDiag_tvAmmount"
@@ -148,7 +149,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/payDiag_tilAmmount" />
 
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/payDiag_tilDate"
                 android:layout_width="match_parent"
@@ -164,9 +164,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/primary_color"
-                    android:paddingBottom="10sp" />
+                    android:paddingBottom="10sp"
+                    android:enabled="true"/>
             </com.google.android.material.textfield.TextInputLayout>
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
