--- a/app/src/main/res/layout/fragment_request_money.xml
+++ b/app/src/main/res/layout/fragment_request_money.xml
@@ -108,6 +108,7 @@
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/requestMoneyFrag_tilPersonalNumber"
+            android:elevation="10sp"
             />
 
 
@@ -115,7 +116,7 @@
             android:id="@+id/requestMoneyFrag_llSender"
             android:layout_width="match_parent"
             android:layout_height="70sp"
-            android:background="@color/grey"
+            android:background="@drawable/roundbackground_listview"
             android:layout_marginTop="30sp"
             app:layout_constraintTop_toBottomOf="@id/requestMoneyFrag_btSearch"
             app:layout_constraintStart_toStartOf="parent"
@@ -123,6 +124,7 @@
             android:layout_marginEnd="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             android:orientation="horizontal"
+            android:elevation="1sp"
             >
 
             <LinearLayout
@@ -179,7 +181,7 @@
             android:dividerHeight="7sp"
             android:scrollbars="none"
             android:clickable="false"
-            android:layout_marginBottom="50sp"
+            android:layout_marginBottom="100sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
