--- a/app/src/main/res/layout/dialog_mobile_transfer.xml
+++ b/app/src/main/res/layout/dialog_mobile_transfer.xml
@@ -57,7 +57,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/primary_color"
-                    android:inputType="numberDecimal"
+                    android:inputType="text"
                     android:paddingBottom="10sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
